tests/snapshots/dash__troubled_narrow.snap
---
source: tests/dash.rs
expression: "text(&buffer(&app_with(\"troubled\"), 80, 60))"
---
 toon-provider dash ── Fixture Provider ── up 1h ── ● 4 problems ── as of 22:14:
┌ NEEDS A PERSON ──────────────────────────────────────────────────────────────┐
│PROBLEM identity: the Profile's connector_seal_key 0x04325b06…ed0188 is not   │
│the key the connector reports (0x04ffffff…ffffff); every tenant will refuse to│
│spawn                                                                         │
│PROBLEM directory: ws://relay-two.fixture.example:7100 refused the latest     │
│write of the Liveness: relay refused (last accepted 1m ago)                   │
│PROBLEM publisher: the channel is drained, and the wallet                     │
│7cVfgArCheMR6Cs4t6vz5rfnqd56vZq4ndaBrY5xkxXy holds 4000000, less than the     │
│10000000 the next channel takes; no directory write can be paid for until it  │
│does                                                                          │
│PROBLEM funding: the connector's Solana settlement address                    │
│9xQeWvG816bUx9EPjHmaT23yvVM2ZWbrrpZb9PusVFin holds 0.004 SOL, under --min-sol │
│0.005; the connector cannot pay for its boot transaction                      │
│warning earnings: GET http://provider-connector:4000/claims answered 404 Not  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ IDENTITY ────────────────────────────────────────────────────────────────────┐
│npub          npub1gekhljh9v0jukzdq6xrshdvqx3yqgctc0xs5jjw0yg597xaw8uns47vduw │
│ILP address   g.fixture                                                       │
│mode          public                                                          │
│sealing key   0x04325b06…ed0188 — MISMATCH: the connector reports             │
│0x04ffffff…ffffff; tenants will refuse to spawn                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌ DIRECTORY ───────────────────────────────────────────────────────────────────┐
│Liveness every 60s; the latest expires in 5m                                  │
│ws://relay-two.fixture.example:7100                                           │
│  profile       accepted 1m ago                                               │
│  liveness      REFUSED 0s ago: relay refused (last accepted 1m ago)          │
│  listing basic accepted 1m ago                                               │
└──────────────────────────────────────────────────── ↓ more: Tab here, then j ┘
┌ PUBLISHER ───────────────────────────────────────────────────────────────────┐
│channel       PubChanne1111111111111111111111111111111111 on solana           │
│deposit       10000000   spent 10000000   remaining 0   (token base units)    │
│runway        unknown — runway = remaining ÷ (price per write × writes per    │
│cadence)                                                                      │
│DRAINED: no directory write can be paid for until the wallet                  │
│7cVfgArCheMR6Cs4t6vz5rfnqd56vZq4ndaBrY5xkxXy holds 10000000 (it holds         │
└──────────────────────────────────────────────────── ↓ more: Tab here, then j ┘
┌ LEASES ──────────────────────────────────────────────────────────────────────┐
│basic v1: 1 of 2 in use, 1 available — 1000 per 3600s                         │
│gpu v1: 0 of 1 in use, 1 available — 1000 per 3600s                           │
│warm v1: 1 of 1 in use, 0 available — 1000 per 3600s (400 standby)            │
│#1000 basic v1 standalone running, expires in 1h 59m; ssh 40000, ports        │
│443→41000; billed 2000                                                        │
└──────────────────────────────────────────────────── ↓ more: Tab here, then j ┘
┌ EARNINGS ────────────────────────────────────────────────────────────────────┐
│unavailable: GET http://provider-connector:4000/claims answered 404 Not Found │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ FUNDING ─────────────────────────────────────────────────────────────────────┐
│settlement    9xQeWvG816bUx9EPjHmaT23yvVM2ZWbrrpZb9PusVFin holds 0.004 SOL    │
│(read from https://solana-rpc.fixture.example)                                │
│publisher     7cVfgArCheMR6Cs4t6vz5rfnqd56vZq4ndaBrY5xkxXy holds 4000000 of   │
│34eSxY7qxQ4GzyhDJ8GpUcTz1WWzruGbJbR8q6TtxfQU; the next channel takes 10000000 │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 r redeem  t top up  u refresh  Tab pane  j/k scroll  q quit
